--- a/roles/datahub/tasks/main.yml
+++ b/roles/datahub/tasks/main.yml
@@ -61,26 +61,26 @@
   become_user: "{{ application_user }}"
 
 - name: Fetch client_id to use in the datahub pipeline
-  command: mongo --quiet --eval "db.Client.find({ 'applicationName' {{ ':' }} '{{ datahub.oauth.application_name }}' }, { '_id' {{ ':' }} 0, 'randomId' {{ ':' }} 1 })" datahub
+  command: >
+    mongo --quiet --eval
+    "db.Client.find(
+      { 'applicationName': '{{ datahub.oauth.application_name }}' },
+      { '_id': 0, 'randomId': 1 }
+    )" datahub
   register: oauth_client_id_raw
   when: mongodb_oauth_client_exists.stdout | length > 0
   become_user: "{{ application_user }}"
 
 - name: Fetch secret to use in the datahub pipeline
-  command: mongo --quiet --eval "db.Client.find({ 'applicationName' {{ ':' }} '{{ datahub.oauth.application_name }}' }, { '_id' {{ ':' }} 0, 'secret' {{ ':' }} 1 })" datahub
+  command: >
+    mongo --quiet --eval
+    "db.Client.find(
+      { 'applicationName': '{{ datahub.oauth.application_name }}' },
+      { '_id': 0, 'secret': 1 }
+    )" datahub
   register: oauth_secret_raw
   when: mongodb_oauth_client_exists.stdout | length > 0
   become_user: "{{ application_user }}"
-
-- name: Store client_id and secret in vars
-  set_fact:
-    datahub:
-      repo_dir: "{{ datahub.repo_dir | regex_replace('\\/$', '') }}"
-      secret_token: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=32') }}"
-      oauth:
-        client_id: "{{ oauth_client_id_raw.stdout | regex_replace('.*\"randomId\".*\"(.*)\".*', '\\1') }}"
-        secret: "{{ oauth_secret_raw.stdout | regex_replace('.*\"secret\".*\"(.*)\".*', '\\1') }}"
-  when: mongodb_oauth_client_exists.stdout | length > 0
 
 - name: Create repo folder
   file: 
