--- a/roles/datahub/tasks/main.yml
+++ b/roles/datahub/tasks/main.yml
@@ -82,6 +82,16 @@
   when: mongodb_oauth_client_exists.stdout | length > 0
   become_user: "{{ application_user }}"
 
+- name: Store client_id and secret in vars
+  set_fact:
+    datahub:
+      repo_dir: "{{ datahub.repo_dir | regex_replace('\\/$', '') }}"
+      secret_token: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=32') }}"
+      oauth:
+        client_id: "{{ (oauth_client_id_raw.stdout | regex_search('\"randomId\".*\"(.*?)\"', '\\1')) | default('') }}"
+        secret: "{{ (oauth_client_id_raw.stdout | regex_search('\"secret\".*\"(.*?)\"', '\\1')) | default('') }}"
+  when: mongodb_oauth_client_exists.stdout | length > 0
+
 - name: Create repo folder
   file: 
     path: "{{ datahub.repo_dir }}"
