--- a/roles/datahub/tasks/main.yml
+++ b/roles/datahub/tasks/main.yml
@@ -89,7 +89,7 @@
       secret_token: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=32') }}"
       oauth:
         client_id: "{{ (oauth_client_id_raw.stdout | regex_search('\"randomId\".*\"(.*?)\"', '\\1')) | default('') }}"
-        secret: "{{ (oauth_client_id_raw.stdout | regex_search('\"secret\".*\"(.*?)\"', '\\1')) | default('') }}"
+        secret: "{{ (oauth_secret_raw.stdout | regex_search('\"secret\".*\"(.*?)\"', '\\1')) | default('') }}"
   when: mongodb_oauth_client_exists.stdout | length > 0
 
 - name: Create repo folder
