--- a/roles/datahub-pipeline/tasks/main.yml
+++ b/roles/datahub-pipeline/tasks/main.yml
@@ -181,12 +181,12 @@
 
 - name: Provide crontab entry for daily reload of datahub records (no output file, not verbose)
   set_fact:
-    cronjobs: "{{ cronjobs + [ 'PERL5LIB=~' ~ application_user ~ '/perl5/bin/dhconveyor transport -p ' ~ datahub_pipeline.dir ~ '/datahub.ini -L1' ] }}"
+    cronjobs: "{{ cronjobs + [ 'PERL5LIB=~' ~ application_user ~ '/perl5/lib/perl5/ ~' ~ application_user ~ '/perl5/bin/dhconveyor transport -p ' ~ datahub_pipeline.dir ~ '/datahub.ini -L1' ] }}"
   when: datahub_pipeline.output_file | length == 0 and not datahub_pipeline.output_verbose
 
 - name: Provide crontab entry for daily reload of datahub records (no output file, verbose)
   set_fact:
-    cronjobs: "{{ cronjobs + [ 'PERL5LIB=~' ~ application_user ~ '/perl5/bin/dhconveyor transport -p ' ~ datahub_pipeline.dir ~ '/datahub.ini -v -L1' ] }}"
+    cronjobs: "{{ cronjobs + [ 'PERL5LIB=~' ~ application_user ~ '/perl5/lib/perl5/ ~' ~ application_user ~ '/perl5/bin/dhconveyor transport -p ' ~ datahub_pipeline.dir ~ '/datahub.ini -v -L1' ] }}"
   when: datahub_pipeline.output_file | length == 0 and datahub_pipeline.output_verbose
 
 - name: Provide crontab entry for daily reload of datahub records (output file, not verbose)
