--- a/roles/datahub/templates/.env
+++ b/roles/datahub/templates/.env
@@ -64,8 +64,8 @@ MONGODB_PASSWORD={{ datahub.mongodb.password }}
 ###< doctrine/doctrine-bundle ###
 
 ###> league/oauth2-server-bundle ###
-OAUTH_PRIVATE_KEY={{ datahub.dir }}/config/jwt/private.pem
-OAUTH_PUBLIC_KEY={{ datahub.dir }}/config/jwt/public.pem
+OAUTH_PRIVATE_KEY=%kernel.project_dir%/config/jwt/private.pem
+OAUTH_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 OAUTH_PASSPHRASE={{ datahub.oauth.passphrase }}
 OAUTH_ENCRYPTION_KEY={{ datahub.oauth.encryption_key }}
 ###< league/oauth2-server-bundle ###
