--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # Using shell instead of apt because apt does not appear to be working (cause unknown)
 - name: Update apt repositories
-  shell: apt-get update
+  shell: apt update
   become: true
 
 - name: Install git, screen, curl, pip, virtualenv, setuptools, software-properties-common, dirmngr, apt-transport-https and ca-certificates
