--- a/roles/datahub-pipeline/tasks/main.yml
+++ b/roles/datahub-pipeline/tasks/main.yml
@@ -67,7 +67,7 @@
     mysql_dev_packages: >-
       {{
         ['default-libmysqlclient-dev'] if ansible_distribution == 'Ubuntu'
-        else ['libmariadb-dev', 'libmariadb-dev-compat']
+        else ['libmariadb-dev', 'libmariadb-dev-compat', 'mariadb-client-core']
       }}
 
 # Install without tests
@@ -83,6 +83,7 @@
   environment:
     PERL5LIB: "{{ application_user_homedir }}/perl5/lib/perl5"
     PATH: "{{ application_user_homedir }}/perl5/bin:{{ ansible_env.PATH }}"
+    MARIADB_CONFIG: "/usr/bin/mariadb_config"
 
 - name: Check if LIDO_1_0 directory exists
   stat:
