--- a/roles/php-fpm/tasks/main.yml
+++ b/roles/php-fpm/tasks/main.yml
@@ -7,6 +7,7 @@
   apt:
     name:
       - php{{ php.version }}
+      - php{{ php.version }}-apcu
       - php{{ php.version }}-fpm
       - php{{ php.version }}-cli
       - php{{ php.version }}-fileinfo
