attempts to download mongodb through adding package

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -39,9 +39,18 @@
     dest: /usr/share/keyrings/mongodb.gpg
     mode: '0644'
 
-- name: Set MongoDB APT repository
+- name: Set MongoDB repository URL
+  set_fact:
+    mongodb_apt_repo: >-
+      {% if ansible_distribution == 'Debian' %}
+      deb [arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb.gpg] https://repo.mongodb.org/apt/debian/{{ mongodb_repo_codename }}/mongodb-org/{{ mongodb_version }} main
+      {% else %}
+      deb [arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb.gpg] https://repo.mongodb.org/apt/ubuntu/{{ mongodb_repo_codename }}/mongodb-org/{{ mongodb_version }} multiverse
+      {% endif %}
+
+- name: Add MongoDB APT repository
   apt_repository:
-    repo: "{{ 'deb [arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb.gpg] https://repo.mongodb.org/apt/debian/' + mongodb_repo_codename + '/mongodb-org/' + mongodb_version + ' main' if ansible_distribution == 'Debian' else 'deb [arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb.gpg] https://repo.mongodb.org/apt/ubuntu/' + mongodb_repo_codename + '/mongodb-org/' + mongodb_version + ' multiverse' }}"
+    repo: "{{ mongodb_apt_repo | trim }}"
     state: present
     filename: mongodb
 
